[package]
name = "inside-vm"
version = "0.1.0"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"
repository = "https://github.com/PicoJr/inside-vm"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vm", "detect", "timing"]
description = "detect virtual machine using timing"
include = ["src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "test-inside-vm"

[profile.release]
debug = true
